ghci.log
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nobsun/devel/logo2022/.ghci
2022-07-08 23:35:41.939388672
>>> :e experiment/Main.hs
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = blank
Ok, no modules loaded.
2022-07-08 23:36:04.359507097
>>> :l experiment/Main.hs 
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )
Ok, one module loaded.
2022-07-08 23:36:04.456132341
>>> main
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nobsun/devel/logo2022/.ghci
2022-07-08 23:38:08.336842371
>>> :e experiment/Main.hs
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = line [(0,0), (640, 480)]
Ok, no modules loaded.
2022-07-08 23:38:20.761968068
>>> :l experiment/Main.hs
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )
Ok, one module loaded.
2022-07-08 23:38:20.863123219
>>> 
2022-07-08 23:38:34.206503343
>>> :main
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nobsun/devel/logo2022/.ghci
2022-07-08 23:42:52.071648937
>>> :e experiment/Main.hs
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = line [(0,0), (640, 480)] <> rectangle 400 150
Ok, no modules loaded.
2022-07-08 23:42:54.706373947
>>> :l experiment/Main.hs
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )

experiment/Main.hs:12:39: error:
    • Variable not in scope: rectangle :: t0 -> t1 -> Picture
    • Perhaps you meant data constructor ‘Rectangle’ (imported from Graphics.Gloss)
   |
12 | picture = line [(0,0), (640, 480)] <> rectangle 400 150
   |                                       ^^^^^^^^^
Failed, no modules loaded.
2022-07-08 23:42:54.82621156
>>> :e
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = line [(0,0), (640, 480)] <> rectangleWire 400 150
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )
Ok, one module loaded.
2022-07-08 23:43:11.911277257
>>> :main
:q
GHCi, version 9.0.2: https://www.haskell.org/ghc/  :? for help
Loaded GHCi configuration from /home/nobsun/devel/logo2022/.ghci
2022-07-08 23:44:24.609260407
>>> :e experiment/Main.hs
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = line [(0,0), (640, 480)] <> rectangleWire 400 150
Ok, no modules loaded.
2022-07-08 23:44:28.112442246
>>> :l experiment/Main.hs
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )
Ok, one module loaded.
2022-07-08 23:44:28.229225496
>>> :e
   1  module Main where
   2  
   3  import Graphics.Gloss
   4  
   5  main :: IO ()
   6  main = display window white picture
   7  
   8  window :: Display
   9  window = InWindow "Hello, world!" (1280, 960) (100, 100)
  10  
  11  picture :: Picture
  12  picture = line [(0,0), (640, 480)] <> rectangleSolid 400 150
[1 of 1] Compiling Main             ( experiment/Main.hs, interpreted )
Ok, one module loaded.
2022-07-08 23:44:46.043301687
>>> :main
